DigicielFull/force-app/main/default/objects/Quote/fields/Add_GST__c.field-meta.xml
<CustomField>
    <fullName>Add_GST__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add GST / VAT?</label>
    <type>Checkbox</type>
</CustomField>