DigicielFull/force-app/main/default/objects/Quote/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <label>Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Technical Feasibility</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Pre-Sales (Networks)</fullName>
            </value>
            <value>
                <fullName>Pre-Sales (Systems)</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>VSAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>