DigicielFull/force-app/main/default/objects/Quote/fields/Company_Address_martinique__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_martinique__c</fullName>
    <defaultValue>&apos;Digicel FWI | Oasis, Bois Rouge, 97224 Ducos, Martinique&apos;</defaultValue>
    <label>Company Address</label>
    <type>TextArea</type>
</CustomField>