DigicielFull/force-app/main/default/objects/Quote/fields/Contract_Value_png__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_png__c</fullName>
    <formula>(MRC__c *  Opportunity.Contract_Term_SP__c )+ OTC__c</formula>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>