DigicielFull/force-app/main/default/objects/Quote/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>