DigicielFull/force-app/main/default/objects/Quote/fields/Created_Byonlyuser__c.field-meta.xml
<CustomField>
    <fullName>Created_Byonlyuser__c</fullName>
    <formula>CreatedBy.FirstName  &amp; &apos; &apos;  &amp;  CreatedBy.LastName</formula>
    <label>Created By</label>
    <type>Text</type>
</CustomField>