DigicielFull/force-app/main/default/objects/Quote/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <label>Discount Applied (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>