DigicielFull/force-app/main/default/objects/Quote/fields/GlobalDiscount__c.field-meta.xml
<CustomField>
    <fullName>GlobalDiscount__c</fullName>
    <label>Global Discount</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>