DigicielFull/force-app/main/default/objects/Quote/fields/Grand_Total_png_sp__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_png_sp__c</fullName>
    <formula>GST_png_sp__c + Total_MRC__c + Total_OTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>