DigicielFull/force-app/main/default/objects/Quote/fields/GST_png_sp__c.field-meta.xml
<CustomField>
    <fullName>GST_png_sp__c</fullName>
    <businessOwnerGroup>South_Pacific_Read_Access_Sharing</businessOwnerGroup>
    <formula>IF( Opportunity.Account.Tax_Exemption__c = true, 0,( Total_MRC__c + Total_OTC__c)*0.1)</formula>
    <label>GST</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>