DigicielFull/force-app/main/default/objects/Quote/fields/GST_VAT__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT__c</fullName>
    <formula>IF(Add_GST__c = TRUE,Sub_Total_GSM__c  * 0.1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST/VAT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>