DigicielFull/force-app/main/default/objects/Quote/fields/LASTMODIFIEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LASTMODIFIEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>