DigicielFull/force-app/main/default/objects/Quote/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <label>MRC</label>
    <summarizedField>QuoteLineItem.MRC__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>