DigicielFull/force-app/main/default/objects/Quote/fields/Needing_Pre_Sales__c.field-meta.xml
<CustomField>
    <fullName>Needing_Pre_Sales__c</fullName>
    <label># Needing Pre-Sales</label>
    <summaryFilterItems>
        <field>QuoteLineItem.PNG_Approvals_Required__c</field>
        <operation>contains</operation>
        <value>Pre-Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>