DigicielFull/force-app/main/default/objects/Quote/fields/Needing_Technical_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Needing_Technical_Feasibility__c</fullName>
    <label># Needing Technical Feasibility</label>
    <summaryFilterItems>
        <field>QuoteLineItem.PNG_Approvals_Required__c</field>
        <operation>contains</operation>
        <value>Technical Feasibility</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>