DigicielFull/force-app/main/default/objects/Quote/fields/Opp_record_type__c.field-meta.xml
<CustomField>
    <fullName>Opp_record_type__c</fullName>
    <formula>Opportunity.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp record type</label>
    <type>Text</type>
</CustomField>