DigicielFull/force-app/main/default/objects/Quote/fields/Oppty_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner_Email__c</fullName>
    <formula>Opportunity.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Owner Email</label>
    <type>Text</type>
</CustomField>