DigicielFull/force-app/main/default/objects/Quote/fields/Oppty_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner_Full_Name__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp;&quot; &quot;&amp;  Opportunity.Owner.LastName</formula>
    <label>Oppty Owner Full Name</label>
    <type>Text</type>
</CustomField>