DigicielFull/force-app/main/default/objects/Quote/fields/Oppty_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner_Title__c</fullName>
    <formula>Opportunity.Owner.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Owner Title</label>
    <type>Text</type>
</CustomField>