DigicielFull/force-app/main/default/objects/Quote/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <label>OTC</label>
    <summarizedField>QuoteLineItem.OTC__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>