DigicielFull/force-app/main/default/objects/Quote/fields/Other_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Fee__c</fullName>
    <label>Other Monthly Fee</label>
    <summarizedField>QuoteLineItem.Other_Monthly_Fee__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>