DigicielFull/force-app/main/default/objects/Quote/fields/PNG_DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>PNG_DiscountAmount__c</fullName>
    <formula>Discount *  Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>