DigicielFull/force-app/main/default/objects/Quote/fields/PNG_DiscountApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_DiscountApprovedDate__c</fullName>
    <label>Discount Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>