DigicielFull/force-app/main/default/objects/Quote/fields/PNG_DiscountRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_DiscountRejectedDate__c</fullName>
    <label>Discount Rejected Date/Time</label>
    <type>DateTime</type>
</CustomField>