DigicielFull/force-app/main/default/objects/Quote/fields/PNG_DraftFollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_DraftFollowUpDate__c</fullName>
    <formula>CreatedDate + VALUE($Label.PNG_QuoteDraftFollowUpDays)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Follow-up Date</label>
    <type>Date</type>
</CustomField>