DigicielFull/force-app/main/default/objects/Quote/fields/PNG_NonFixedLineItems__c.field-meta.xml
<CustomField>
    <fullName>PNG_NonFixedLineItems__c</fullName>
    <label># Non Fixed Line Items</label>
    <summaryFilterItems>
        <field>QuoteLineItem.PNG_FixedVoiceService__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>