DigicielFull/force-app/main/default/objects/Quote/fields/PNG_NRR__c.field-meta.xml
<CustomField>
    <fullName>PNG_NRR__c</fullName>
    <formula>Opportunity.PNG_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>