DigicielFull/force-app/main/default/objects/Quote/fields/PNG_OpportunityIsClosed__c.field-meta.xml
<CustomField>
    <fullName>PNG_OpportunityIsClosed__c</fullName>
    <formula>Opportunity.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Is Closed?</label>
    <type>Checkbox</type>
</CustomField>