DigicielFull/force-app/main/default/objects/Quote/fields/PNG_OwnerManager__c.field-meta.xml
<CustomField>
    <fullName>PNG_OwnerManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>