DigicielFull/force-app/main/default/objects/Quote/fields/PNG_PreSalesConsultant__c.field-meta.xml
<CustomField>
    <fullName>PNG_PreSalesConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PNG_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>