DigicielFull/force-app/main/default/objects/Quote/fields/PNG_PreSalesStatus__c.field-meta.xml
<CustomField>
    <fullName>PNG_PreSalesStatus__c</fullName>
    <label>Pre-Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Not Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>