DigicielFull/force-app/main/default/objects/Quote/fields/PNG_QuoteApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_QuoteApprovedDate__c</fullName>
    <label>Solution Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>