DigicielFull/force-app/main/default/objects/Quote/fields/PNG_QuoteRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_QuoteRejectedDate__c</fullName>
    <label>Solution Rejected Date/Time</label>
    <type>DateTime</type>
</CustomField>