DigicielFull/force-app/main/default/objects/Quote/fields/PNG_Step3InitiatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PNG_Step3InitiatedDateTime__c</fullName>
    <label>Step 3 Initiated Date/Time</label>
    <type>DateTime</type>
</CustomField>