DigicielFull/force-app/main/default/objects/Quote/fields/PNG_TechnicalFeasibilityApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_TechnicalFeasibilityApprovedDate__c</fullName>
    <label>Technical Feasibility Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>