DigicielFull/force-app/main/default/objects/Quote/fields/PreSales_Systems_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Systems_Line_Items__c</fullName>
    <label># PreSales Systems Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>