DigicielFull/force-app/main/default/objects/Quote/fields/PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderNumber__c</fullName>
    <label>Purchase Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>