DigicielFull/force-app/main/default/objects/Quote/fields/Quote_Note_Office_365__c.field-meta.xml
<CustomField>
    <fullName>Quote_Note_Office_365__c</fullName>
    <defaultValue>&quot;***EXPLANATORY NOTES***&quot;
+BR()+&quot;1. Charge Types: MRC=Monthly Recurring Charge  OTC=One Time Charge&quot;
+BR()+&quot;2. Offer does not apply to 512K DIA connections or DIA Redundant links&quot;
+BR()+&quot;3. Set-up charge of PGK 1000 applies to new Office 365 tenants&quot;
+BR()+&quot;4. Digicel must be Digital Partner of Record with Administration rights to the tenant&quot;
+BR()+&quot;5. The DIA offer is valid for as long as you have a DIA contract with Digicel PNG&quot;
+BR()+&quot;6. Free Office 365 subscriptions revert to list price on termination of DIA contract&quot;
+BR()+&quot;7. If Microsoft alter Office 365 list prices Digicel reserve the right to modify the number of free subscriptions per credit&quot;</defaultValue>
    <description>This is used to display the DIA free offer terms and conditions on the quote form sent to the customer</description>
    <label>Quote Note Office 365</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>