DigicielFull/force-app/main/default/objects/Quote/fields/Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_Notes__c</fullName>
    <defaultValue>&quot;Prices shown do not include any applicable taxes&quot;</defaultValue>
    <label>Quote Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>