DigicielFull/force-app/main/default/objects/Quote/fields/Quote_SP__c.field-meta.xml
<CustomField>
    <fullName>Quote_SP__c</fullName>
    <label>Quote #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>