DigicielFull/force-app/main/default/objects/Quote/fields/Sub_Total_GSM__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_GSM__c</fullName>
    <formula>IF( OR(ISPICKVAL(Opportunity.PNG_OpportunityType__c , &quot;GSM&quot;),ISPICKVAL(Opportunity.PNG_OpportunityType__c,&quot;ICT &amp; GSM&quot;)),

ROUND(Total_Deposit_Fee__c + Installation_Setup_Fee__c + Total_Hardware_fee__c +  Other_Monthly_Fee__c + Advanced_Amount__c, 2)  ,

ROUND(PNG_Total_GSM_Hardware__c + X1st_Month_Fee__c + Opportunity.Setup_Fees__c + Advanced_Amount__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>