DigicielFull/force-app/main/default/objects/Quote/fields/Technical_Feasibility_Approved__c.field-meta.xml
<CustomField>
    <fullName>Technical_Feasibility_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Feasibility Approved</label>
    <type>Checkbox</type>
</CustomField>