DigicielFull/force-app/main/default/objects/Quote/fields/Technical_Feasibility_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Technical_Feasibility_Line_Items__c</fullName>
    <label># Technical Feasibility Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>