DigicielFull/force-app/main/default/objects/Quote/fields/Total_Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Payable__c</fullName>
    <formula>IF( Add_GST__c =True, Sub_Total_GSM__c+ GST_VAT__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>