DigicielFull/force-app/main/default/objects/Quote/fields/Total_Contract_Value_sp__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_sp__c</fullName>
    <formula>Opportunity.Contract_Value_SP__c +  Opportunity.Setup_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>