DigicielFull/force-app/main/default/objects/Quote/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <description>This value is automatically calculated based on the total deposit for each product.</description>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>