DigicielFull/force-app/main/default/objects/Quote/fields/Total_Deposit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Fee__c</fullName>
    <label>Total Deposit Fee</label>
    <summarizedField>QuoteLineItem.Total_Deposit_sp__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>