DigicielFull/force-app/main/default/objects/Quote/fields/Total_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware__c</fullName>
    <formula>Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDEPRECATED_Total Hardware</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>