DigicielFull/force-app/main/default/objects/Quote/fields/Total_Hardware_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_fee__c</fullName>
    <label>Total Hardware</label>
    <summarizedField>QuoteLineItem.OTC__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Charge_Type__c</field>
        <operation>equals</operation>
        <value>OTC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.PNG_Category_Type__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>