DigicielFull/force-app/main/default/objects/Quote/fields/Total_Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Recurring_Revenue__c</fullName>
    <formula>If(Total_Recurring_Revenue__c &gt; 0, Total_Recurring_Revenue__c / 12, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Total Monthly Fee) 
This value is automatically calculated based on the total monthly fee for each product</inlineHelpText>
    <label>Total Monthly Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>