DigicielFull/force-app/main/default/objects/Quote/fields/Total_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC__c</fullName>
    <formula>Opportunity.MRC__c</formula>
    <label>Total MRC</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>