DigicielFull/force-app/main/default/objects/Quote/fields/Total_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Revenue__c</fullName>
    <description>(Monthly Fee * 12) This value is automatically calculated based on the total monthly fee for each product</description>
    <label>Total Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>