DigicielFull/force-app/main/default/objects/Quote/fields/TotalAcutal__c.field-meta.xml
<CustomField>
    <fullName>TotalAcutal__c</fullName>
    <label>TotalAcutal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>