DigicielFull/force-app/main/default/objects/Quote/fields/TotalMateriel__c.field-meta.xml
<CustomField>
    <fullName>TotalMateriel__c</fullName>
    <label>Total Matériel</label>
    <summarizedField>QuoteLineItem.DiscountedTotalSalesPrice__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Charge_Type__c</field>
        <operation>equals</operation>
        <value>OTC</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>