DigicielFull/force-app/main/default/objects/Quote/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <type>AutoNumber</type>
</CustomField>