DigicielFull/force-app/main/default/objects/Quote/fields/Voice_Solution_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Voice_Solution_Line_Items__c</fullName>
    <label># Voice Solution Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>