DigicielFull/force-app/main/default/objects/Quote/recordTypes/Digicel_PNG_Quote.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_Quote</fullName>
    <active>true</active>
    <label>Digicel PNG Quote</label>
</RecordType>