DigicielFull/force-app/main/default/objects/Quote/recordTypes/Trend_Media_Quote.recordType-meta.xml
<RecordType>
    <fullName>Trend_Media_Quote</fullName>
    <active>true</active>
    <description>Use this record type to send a quote to a Trend Customer</description>
    <label>Trend Media Quote</label>
</RecordType>