DigicielFull/force-app/main/default/objects/Quote/validationRules/PNG_PreventStatusChangeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_PreventStatusChangeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status), OR(LEFT(RecordType.Id,15) = LEFT($Label.PNG_QuoteRecordTypeId,15),LEFT(RecordType.Id,15) = LEFT($Label.PNG_PNGQuoteRecTypeId,15),LEFT(RecordType.Id,15) = LEFT($Label.PNG_ApprovedQuoteRecordType,15)),OR(PNG_QuoteType__c=&quot;ICT&quot;,PNG_QuoteType__c =&quot;ICT &amp; GSM&quot;)&amp;&amp;   NOT(ISPICKVAL(Opportunity.Product_Level_1__c, &quot;LTE&quot;)),

OR(
(ISPICKVAL( PRIORVALUE ( Status ), &apos;Solution Approved&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;Approved&apos;))),
(ISPICKVAL( PRIORVALUE ( Status ), &apos;In Solution Review&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;Solution Approved&apos;))),
(ISPICKVAL( PRIORVALUE ( Status ), &apos;Technical Feasibility Approved&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;In Solution Review&apos;))),
(ISPICKVAL( PRIORVALUE ( Status ), &apos;In Technical Feasibility Check&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;Technical Feasibility Approved&apos;))),
(ISPICKVAL( PRIORVALUE (Status), &apos;Needs Review&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;In Technical Feasibility Check&apos;))),
( ISNEW()&amp;&amp; NOT(ISPICKVAL(Status,&apos;Draft&apos;))))
)
&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;PNG - Service Manager + Pre-sales&quot;</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cannot proceed without all the approvals</errorMessage>
</ValidationRule>