DigicielFull/force-app/main/default/objects/Quote/validationRules/PNG_QuoteWithClosedOppIsLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_QuoteWithClosedOppIsLocked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( OR( RecordType.Id = LEFT( $Label.PNG_PNGQuoteRecTypeId ,15), RecordType.Id = LEFT( $Label.PNG_QuoteRecordTypeId ,15)) , IsSyncing =TRUE,PRIORVALUE( PNG_OpportunityIsClosed__c ) = TRUE)&amp;&amp;$Profile.Name&lt;&gt;&quot;System Administrator&quot; , TRUE , FALSE)</errorConditionFormula>
    <errorMessage>Cannot edit as the related Opportunity is Closed</errorMessage>
</ValidationRule>